# jarvisc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: asr_handler.h  definitions.h  phrase_data.h  recording.h
scripts/: pipe-parec
src/: CMakeLists.txt  asr_handler.cpp  example.cpp  main.cpp  phrase_data.cpp  recording.cpp
